// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reported Post call handleDelete 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <View
    style={
-     Array [
      Object {
        \\"alignItems\\": \\"center\\",
-         \\"backgroundColor\\": \\"#ffffff\\",
-         \\"borderRadius\\": 8,
-         \\"elevation\\": 4,
-         \\"flexDirection\\": \\"row\\",
-         \\"marginHorizontal\\": 16,
-         \\"marginVertical\\": 8,
-         \\"shadowColor\\": \\"#000000\\",
-         \\"shadowOffset\\": Object {
-           \\"height\\": 2,
-           \\"width\\": 0,
-         },
-         \\"shadowOpacity\\": 0.3,
-         \\"shadowRadius\\": 2,
-       },
-       Object {
-         \\"alignItems\\": \\"flex-start\\",
-         \\"backgroundColor\\": \\"#ffffff\\",
        \\"flexDirection\\": \\"column\\",
-         \\"marginBottom\\": 8,
-         \\"marginHorizontal\\": 20,
-         \\"marginVertical\\": 15,
-       },
-     ]
-   }
- >
-   <View
-     style={
-       Object {
-         \\"borderBottomColor\\": \\"#ECEEF2\\",
-         \\"borderBottomWidth\\": 1,
-         \\"flexDirection\\": \\"row\\",
-         \\"padding\\": 15,
-       }
-     }
-   >
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
-       }
-     >
-       <Text
-         style={
-           Object {
-             \\"color\\": \\"#ECEEF2\\",
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             \\"fontSize\\": 14,
-             \\"fontStyle\\": \\"normal\\",
-             \\"lineHeight\\": 20,
-             \\"textAlignVertical\\": \\"center\\",
-             \\"textTransform\\": \\"none\\",
+       \\"justifyContent\\": \\"center\\",
+       \\"marginTop\\": \\"50%\\",
      }
    }
  >
-         Reported By
-         :
-       </Text>
+   <SvgMock />
    <Text
-         numberOfLines={1}
      style={
        Object {
-             \\"color\\": \\"#ffffff\\",
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             \\"fontSize\\": 16,
+         \\"color\\": \\"#B4B6BA\\",
+         \\"fontFamily\\": \\"SourceSansPro-Light\\",
+         \\"fontSize\\": 24,
          \\"fontStyle\\": \\"normal\\",
-             \\"lineHeight\\": 24,
+         \\"lineHeight\\": 30,
+         \\"paddingVertical\\": 20,
          \\"textAlignVertical\\": \\"center\\",
          \\"textTransform\\": \\"none\\",
        }
      }
    >
-         Roscoe Johnston
-       </Text>
-       <Text
-         numberOfLines={1}
-         style={
-           Object {
-             \\"color\\": \\"#ffffff\\",
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             \\"fontSize\\": 16,
-             \\"fontStyle\\": \\"normal\\",
-             \\"lineHeight\\": 24,
-             \\"textAlignVertical\\": \\"center\\",
-             \\"textTransform\\": \\"none\\",
-           }
-         }
-       >
-         Synergistic tertiary service-desk
-       </Text>
-     </View>
-     <Text
-       onPress={[Function handleOpenPost]}
-       style={
-         Object {
-           \\"color\\": \\"#3CC8E6\\",
-         }
-       }
-       testID=\\"openPostButton\\"
-     >
-       Open Post
-     </Text>
-   </View>
-   <View
-     style={
-       Object {
-         \\"paddingHorizontal\\": 20,
-         \\"paddingTop\\": 12,
-       }
-     }
-   >
-     <View
-       style={
-         Object {
-           \\"flexDirection\\": \\"row\\",
-           \\"justifyContent\\": \\"flex-start\\",
-           \\"paddingVertical\\": 8,
-         }
-       }
-     >
-       <Image
-         resizeMode=\\"cover\\"
-         source={
-           Object {
-             \\"uri\\": \\"eligendi occaecati debitis\\",
-           }
-         }
-         style={
-           Array [
-             Object {
-               \\"borderRadius\\": 24,
-               \\"height\\": 48,
-               \\"width\\": 48,
-             },
-             Object {
-               \\"backgroundColor\\": \\"rgb(135, 121, 125)\\",
-             },
-             undefined,
-           ]
-         }
-       />
-       <View
-         style={
-           Array [
-             Object {
-               \\"alignItems\\": \\"flex-start\\",
-               \\"flex\\": 1,
-               \\"flexDirection\\": \\"column\\",
-               \\"justifyContent\\": \\"center\\",
-               \\"paddingHorizontal\\": 8,
-             },
-             undefined,
-           ]
-         }
-       >
-         <Text
-           numberOfLines={2}
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#007398\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 16,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 24,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-               Object {
-                 \\"color\\": \\"#505256\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Bold\\",
-                 \\"fontSize\\": 16,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"letterSpacing\\": 1,
-                 \\"lineHeight\\": 20,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-             ]
-           }
-         >
-           Keaton Keeling
+     Hurray
    </Text>
    <Text
      style={
-             Array [
        Object {
          \\"color\\": \\"#B4B6BA\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 12,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 16,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-               Object {
-                 \\"color\\": \\"#B4B6BA\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 12,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 16,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-             ]
-           }
-           testID=\\"Text\\"
-         >
-           August 19, 2018 @ 2:06 PM
-         </Text>
-       </View>
-     </View>
-   </View>
-   <View
-     style={
-       Object {
-         \\"paddingHorizontal\\": 20,
-         \\"paddingVertical\\": 8,
-       }
-     }
-   >
-     <Text
-       style={
-         Object {
-           \\"color\\": \\"#505256\\",
          \\"fontFamily\\": \\"SourceSansPro-Regular\\",
          \\"fontSize\\": 16,
          \\"fontStyle\\": \\"normal\\",
-           \\"justifyContent\\": \\"flex-start\\",
          \\"lineHeight\\": 24,
-           \\"paddingBottom\\": 8,
          \\"textAlignVertical\\": \\"center\\",
          \\"textTransform\\": \\"none\\",
        }
-       }
-     >
-       porro ut et
-     </Text>
-   </View>
-   <View
-     style={
-       Array [
-         Object {
-           \\"paddingTop\\": 20,
-         },
-         Object {
-           \\"flexDirection\\": \\"row\\",
-         },
-       ]
-     }
-   >
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
      }
    >
-       <View
-         accessible={true}
-         focusable={true}
-         onClick={[Function onClick]}
-         onResponderGrant={[Function onResponderGrant]}
-         onResponderMove={[Function onResponderMove]}
-         onResponderRelease={[Function onResponderRelease]}
-         onResponderTerminate={[Function onResponderTerminate]}
-         onResponderTerminationRequest={[Function onResponderTerminationRequest]}
-         onStartShouldSetResponder={[Function onStartShouldSetResponder]}
-         style={
-           Object {
-             \\"alignItems\\": \\"center\\",
-             \\"backgroundColor\\": \\"#3CC8E6\\",
-             \\"borderBottomLeftRadius\\": 8,
-             \\"borderRightColor\\": \\"#ffffff\\",
-             \\"borderRightWidth\\": 1,
-             \\"height\\": 50,
-             \\"justifyContent\\": \\"center\\",
-             \\"opacity\\": 1,
-           }
-         }
-         testID=\\"ignoreButton\\"
-       >
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Bold\\",
-                 \\"fontSize\\": 14,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"letterSpacing\\": 1,
-                 \\"lineHeight\\": 18,
-                 \\"textAlign\\": \\"center\\",
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"uppercase\\",
-               },
-               Object {},
-             ]
-           }
-         >
-           IGNORE
-         </Text>
-       </View>
-     </View>
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
-       }
-     >
-       <View
-         accessible={true}
-         focusable={true}
-         onClick={[Function onClick]}
-         onResponderGrant={[Function onResponderGrant]}
-         onResponderMove={[Function onResponderMove]}
-         onResponderRelease={[Function onResponderRelease]}
-         onResponderTerminate={[Function onResponderTerminate]}
-         onResponderTerminationRequest={[Function onResponderTerminationRequest]}
-         onStartShouldSetResponder={[Function onStartShouldSetResponder]}
-         style={
-           Object {
-             \\"alignItems\\": \\"center\\",
-             \\"backgroundColor\\": \\"#3CC8E6\\",
-             \\"borderBottomRightRadius\\": 8,
-             \\"height\\": 50,
-             \\"justifyContent\\": \\"center\\",
-             \\"opacity\\": 1,
-           }
-         }
-         testID=\\"deleteButton\\"
-       >
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Bold\\",
-                 \\"fontSize\\": 14,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"letterSpacing\\": 1,
-                 \\"lineHeight\\": 18,
-                 \\"textAlign\\": \\"center\\",
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"uppercase\\",
-               },
-               Object {},
-             ]
-           }
-         >
-           DELETE
+     You have successfully deleted the post.
    </Text>
-       </View>
-     </View>
-   </View>
  </View>"
`;

exports[`Reported Post call handleIgnore 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <View
    style={
-     Array [
      Object {
        \\"alignItems\\": \\"center\\",
-         \\"backgroundColor\\": \\"#ffffff\\",
-         \\"borderRadius\\": 8,
-         \\"elevation\\": 4,
-         \\"flexDirection\\": \\"row\\",
-         \\"marginHorizontal\\": 16,
-         \\"marginVertical\\": 8,
-         \\"shadowColor\\": \\"#000000\\",
-         \\"shadowOffset\\": Object {
-           \\"height\\": 2,
-           \\"width\\": 0,
-         },
-         \\"shadowOpacity\\": 0.3,
-         \\"shadowRadius\\": 2,
-       },
-       Object {
-         \\"alignItems\\": \\"flex-start\\",
-         \\"backgroundColor\\": \\"#ffffff\\",
        \\"flexDirection\\": \\"column\\",
-         \\"marginBottom\\": 8,
-         \\"marginHorizontal\\": 20,
-         \\"marginVertical\\": 15,
-       },
-     ]
-   }
- >
-   <View
-     style={
-       Object {
-         \\"borderBottomColor\\": \\"#ECEEF2\\",
-         \\"borderBottomWidth\\": 1,
-         \\"flexDirection\\": \\"row\\",
-         \\"padding\\": 15,
-       }
-     }
-   >
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
-       }
-     >
-       <Text
-         style={
-           Object {
-             \\"color\\": \\"#ECEEF2\\",
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             \\"fontSize\\": 14,
-             \\"fontStyle\\": \\"normal\\",
-             \\"lineHeight\\": 20,
-             \\"textAlignVertical\\": \\"center\\",
-             \\"textTransform\\": \\"none\\",
+       \\"justifyContent\\": \\"center\\",
+       \\"marginTop\\": \\"50%\\",
      }
    }
  >
-         Reported By
-         :
-       </Text>
+   <SvgMock />
    <Text
-         numberOfLines={1}
      style={
        Object {
-             \\"color\\": \\"#ffffff\\",
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             \\"fontSize\\": 16,
+         \\"color\\": \\"#B4B6BA\\",
+         \\"fontFamily\\": \\"SourceSansPro-Light\\",
+         \\"fontSize\\": 24,
          \\"fontStyle\\": \\"normal\\",
-             \\"lineHeight\\": 24,
+         \\"lineHeight\\": 30,
+         \\"paddingVertical\\": 20,
          \\"textAlignVertical\\": \\"center\\",
          \\"textTransform\\": \\"none\\",
        }
      }
    >
-         Roscoe Johnston
-       </Text>
-       <Text
-         numberOfLines={1}
-         style={
-           Object {
-             \\"color\\": \\"#ffffff\\",
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             \\"fontSize\\": 16,
-             \\"fontStyle\\": \\"normal\\",
-             \\"lineHeight\\": 24,
-             \\"textAlignVertical\\": \\"center\\",
-             \\"textTransform\\": \\"none\\",
-           }
-         }
-       >
-         Synergistic tertiary service-desk
-       </Text>
-     </View>
-     <Text
-       onPress={[Function handleOpenPost]}
-       style={
-         Object {
-           \\"color\\": \\"#3CC8E6\\",
-         }
-       }
-       testID=\\"openPostButton\\"
-     >
-       Open Post
-     </Text>
-   </View>
-   <View
-     style={
-       Object {
-         \\"paddingHorizontal\\": 20,
-         \\"paddingTop\\": 12,
-       }
-     }
-   >
-     <View
-       style={
-         Object {
-           \\"flexDirection\\": \\"row\\",
-           \\"justifyContent\\": \\"flex-start\\",
-           \\"paddingVertical\\": 8,
-         }
-       }
-     >
-       <Image
-         resizeMode=\\"cover\\"
-         source={
-           Object {
-             \\"uri\\": \\"eligendi occaecati debitis\\",
-           }
-         }
-         style={
-           Array [
-             Object {
-               \\"borderRadius\\": 24,
-               \\"height\\": 48,
-               \\"width\\": 48,
-             },
-             Object {
-               \\"backgroundColor\\": \\"rgb(135, 121, 125)\\",
-             },
-             undefined,
-           ]
-         }
-       />
-       <View
-         style={
-           Array [
-             Object {
-               \\"alignItems\\": \\"flex-start\\",
-               \\"flex\\": 1,
-               \\"flexDirection\\": \\"column\\",
-               \\"justifyContent\\": \\"center\\",
-               \\"paddingHorizontal\\": 8,
-             },
-             undefined,
-           ]
-         }
-       >
-         <Text
-           numberOfLines={2}
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#007398\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 16,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 24,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-               Object {
-                 \\"color\\": \\"#505256\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Bold\\",
-                 \\"fontSize\\": 16,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"letterSpacing\\": 1,
-                 \\"lineHeight\\": 20,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-             ]
-           }
-         >
-           Keaton Keeling
+     Hurray
    </Text>
    <Text
      style={
-             Array [
        Object {
          \\"color\\": \\"#B4B6BA\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 12,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 16,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-               Object {
-                 \\"color\\": \\"#B4B6BA\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-                 \\"fontSize\\": 12,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"lineHeight\\": 16,
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"none\\",
-               },
-             ]
-           }
-           testID=\\"Text\\"
-         >
-           August 19, 2018 @ 2:06 PM
-         </Text>
-       </View>
-     </View>
-   </View>
-   <View
-     style={
-       Object {
-         \\"paddingHorizontal\\": 20,
-         \\"paddingVertical\\": 8,
-       }
-     }
-   >
-     <Text
-       style={
-         Object {
-           \\"color\\": \\"#505256\\",
          \\"fontFamily\\": \\"SourceSansPro-Regular\\",
          \\"fontSize\\": 16,
          \\"fontStyle\\": \\"normal\\",
-           \\"justifyContent\\": \\"flex-start\\",
          \\"lineHeight\\": 24,
-           \\"paddingBottom\\": 8,
          \\"textAlignVertical\\": \\"center\\",
          \\"textTransform\\": \\"none\\",
        }
-       }
-     >
-       porro ut et
-     </Text>
-   </View>
-   <View
-     style={
-       Array [
-         Object {
-           \\"paddingTop\\": 20,
-         },
-         Object {
-           \\"flexDirection\\": \\"row\\",
-         },
-       ]
-     }
-   >
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
      }
    >
-       <View
-         accessible={true}
-         focusable={true}
-         onClick={[Function onClick]}
-         onResponderGrant={[Function onResponderGrant]}
-         onResponderMove={[Function onResponderMove]}
-         onResponderRelease={[Function onResponderRelease]}
-         onResponderTerminate={[Function onResponderTerminate]}
-         onResponderTerminationRequest={[Function onResponderTerminationRequest]}
-         onStartShouldSetResponder={[Function onStartShouldSetResponder]}
-         style={
-           Object {
-             \\"alignItems\\": \\"center\\",
-             \\"backgroundColor\\": \\"#3CC8E6\\",
-             \\"borderBottomLeftRadius\\": 8,
-             \\"borderRightColor\\": \\"#ffffff\\",
-             \\"borderRightWidth\\": 1,
-             \\"height\\": 50,
-             \\"justifyContent\\": \\"center\\",
-             \\"opacity\\": 1,
-           }
-         }
-         testID=\\"ignoreButton\\"
-       >
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Bold\\",
-                 \\"fontSize\\": 14,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"letterSpacing\\": 1,
-                 \\"lineHeight\\": 18,
-                 \\"textAlign\\": \\"center\\",
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"uppercase\\",
-               },
-               Object {},
-             ]
-           }
-         >
-           IGNORE
-         </Text>
-       </View>
-     </View>
-     <View
-       style={
-         Array [
-           Object {},
-           Object {
-             \\"flex\\": 1,
-           },
-         ]
-       }
-     >
-       <View
-         accessible={true}
-         focusable={true}
-         onClick={[Function onClick]}
-         onResponderGrant={[Function onResponderGrant]}
-         onResponderMove={[Function onResponderMove]}
-         onResponderRelease={[Function onResponderRelease]}
-         onResponderTerminate={[Function onResponderTerminate]}
-         onResponderTerminationRequest={[Function onResponderTerminationRequest]}
-         onStartShouldSetResponder={[Function onStartShouldSetResponder]}
-         style={
-           Object {
-             \\"alignItems\\": \\"center\\",
-             \\"backgroundColor\\": \\"#3CC8E6\\",
-             \\"borderBottomRightRadius\\": 8,
-             \\"height\\": 50,
-             \\"justifyContent\\": \\"center\\",
-             \\"opacity\\": 1,
-           }
-         }
-         testID=\\"deleteButton\\"
-       >
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-                 \\"fontFamily\\": \\"SourceSansPro-Bold\\",
-                 \\"fontSize\\": 14,
-                 \\"fontStyle\\": \\"normal\\",
-                 \\"letterSpacing\\": 1,
-                 \\"lineHeight\\": 18,
-                 \\"textAlign\\": \\"center\\",
-                 \\"textAlignVertical\\": \\"center\\",
-                 \\"textTransform\\": \\"uppercase\\",
-               },
-               Object {},
-             ]
-           }
-         >
-           DELETE
+     You have successfully ignored the post.
    </Text>
-       </View>
-     </View>
-   </View>
  </View>"
`;

exports[`Reported comment call handleDelete 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginTop": "50%",
    }
  }
>
  <SvgMock />
  <Text
    style={
      Object {
        "color": "#B4B6BA",
        "fontFamily": "SourceSansPro-Light",
        "fontSize": 24,
        "fontStyle": "normal",
        "lineHeight": 30,
        "paddingVertical": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    Hurray
  </Text>
  <Text
    style={
      Object {
        "color": "#B4B6BA",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "lineHeight": 24,
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    You have successfully deleted the comment.
  </Text>
</View>
`;

exports[`Reported comment call handleIgnore 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "center",
      "marginTop": "50%",
    }
  }
>
  <SvgMock />
  <Text
    style={
      Object {
        "color": "#B4B6BA",
        "fontFamily": "SourceSansPro-Light",
        "fontSize": 24,
        "fontStyle": "normal",
        "lineHeight": 30,
        "paddingVertical": 20,
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    Hurray
  </Text>
  <Text
    style={
      Object {
        "color": "#B4B6BA",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "lineHeight": 24,
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    You have successfully ignored the comment.
  </Text>
</View>
`;

exports[`renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#ffffff",
        "flexDirection": "column",
        "marginBottom": 8,
        "marginHorizontal": 20,
        "marginVertical": 15,
      },
    ]
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "#ECEEF2",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "padding": 15,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#ECEEF2",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "lineHeight": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Reported By
        :
      </Text>
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "lineHeight": 24,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Hayden Zieme
      </Text>
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "fontStyle": "normal",
            "lineHeight": 24,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Integrated user-facing intranet
      </Text>
    </View>
    <Text
      onPress={[Function]}
      style={
        Object {
          "color": "#3CC8E6",
        }
      }
      testID="openPostButton"
    >
      Open Post
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 30,
          "paddingVertical": 8,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "uri": "qui amet iure",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            Object {
              "backgroundColor": "rgb(161, 123, 130)",
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 25,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              Object {
                "paddingRight": 6,
              }
            }
          >
            Darwin Bosco
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "lineHeight": 16,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                },
                Object {},
              ]
            }
            testID="Text"
          >
            January 19, 2010 @ 12:03 PM
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#B4B6BA",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "lineHeight": 16,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                },
                Object {
                  "paddingHorizontal": 2,
                },
              ]
            }
          >
             • 
          </Text>
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Edited
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "#ECEEF2",
                "borderRadius": 8,
                "marginVertical": 5,
                "paddingHorizontal": 13,
                "paddingVertical": 8,
              },
              undefined,
            ]
          }
        >
          <Text>
            alias consequuntur corporis
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "paddingTop": 20,
        },
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "borderBottomLeftRadius": 8,
            "borderRightColor": "#ffffff",
            "borderRightWidth": 1,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="ignoreButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 14,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {},
            ]
          }
        >
          IGNORE
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "borderBottomRightRadius": 8,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="deleteButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 14,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {},
            ]
          }
        >
          DELETE
        </Text>
      </View>
    </View>
  </View>
</View>
`;
